objects/Group_Affiliation_Event__e.object
<CustomObject>
    <description>Platform Event Channel used for Group Affiliation related published events. This includes add-group-affiliation, remove-group-affiliation.</description>
    <fields>
        <fullName>Account_Salesforce_Id__c</fullName>
        <description>Indicates the Salesforce Id associated with the Account record</description>
        <label>Account Salesforce Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field indicating if the Event is activating or de-activating a group or group affiliation.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Salesforce_Id__c</fullName>
        <description>Salesforce Id for the Group record</description>
        <label>Group Salesforce Id</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Group_Id__c</fullName>
        <description>Unique external id field for the Group, this field is generated upon creation of the record and used to identify the Group record across multiple data systems</description>
        <label>Organization Group Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Field indicates the Organization level Id. Currently this field is populated with the Dealership Id found on the Account.</description>
        <label>Organization Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>Field indicating the Type event this Platform Event is. This can include add-group-affiliation, remove-group-affiliation</description>
        <label>event type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Group Affiliation</label>
    <pluralLabel>Groups Affiliations</pluralLabel>
</CustomObject>